# temporary-saber-rs

./: Cargo.toml
src/: generic.rs  lib.rs  non_generic.rs
