[package]
name = "saber"
version = "0.1.0"
authors = ["Daan Sprenkels <hello@dsprenkels.com>"]
edition = "2021"
documentation = "https://dsprenkels.github.io/saber-rust/saber"
repository = "https://github.com/dsprenkels/saber-rust"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "post-quantum-cryptography"]
license = "CC0"
publish = false

[badges]
travis-ci = { repository = "dsprenkels/saber-rust" }
maintenance = { status = "as-is" }

[dependencies]
blake3 = "1.3"
rand = "0.8.5"
secret_integers = "=0.1.3"

[dependencies.sha3]
version = "0.8"
default-features = false

[build-dependencies]
cc = "1.0"

[features]
reftest = []
